2014-03-19  Michael R. Crusoe  <mcrusoe@msu.edu>

    * Update bundled zlib version to 1.2.8 from 1.2.3. Changes of note:
    "Wholesale replacement of gz* functions with faster versions"
    "Added LFS (Large File Summit) support for 64-bit file offsets"
    "Fix serious but very rare decompression bug"

2014-03-19  Michael R. Crusoe <mcrusoe@msu.edu>

    * lib/counting.hh: include hashtable.hh
    * lib/counting.{cc,hh},khmer/_khmermodule.cc: many downcasts removed

2014-03-19  Titus Brown  <t@idyll.org>

    * Makefile: update documentation on targets at top; clean autopep8 output.
    * test_counting_single.py: fixed pep8 violations in spacing
    * test_scripts.py: eliminate popenscript in favor of proper SystemExit
	handling in runscript; fix pep8 violations.

2014-03-19  Michael R. Crusoe <mcrusoe@msu.edu> and Luiz Irber
<luiz.irber@gmail.com>

    * lib/ktable.{cc,hh},khmer/{__init__.py},{_khmermodule.cc}, tests/
    test_{counting_{hash,single},ktable}.py: remove the unused KTable object
    * doc/{index,ktable}.txt: remove references to KTable
    * lib/{ktable.{hh,cc} → kmer_hash.{hh,cc}}: rename remaining ktable files
    to kmer_hash
    * lib/{hashtable,kmer}.hh: replace ktable headers with kmer_hash

2014-03-17  Ram RS  <ramrs@nyu.edu>

    * extract-partitions.py: pylint warnings addressed
    * test_scripts.py: tests added to cover extract-partitions completely

2014-03-16  Michael R. Crusoe <mcrusoe@msu.edu>

    * lib/read_parsers.cc: fix for Coverity CID 1054789: Unititialized scalar
    field II: fill_id is never zeroed out.

2014-03-16  Ram RS  <ramrs@nyu.edu>

    * Project email in copyright headers updated

2014-03-14  Michael R. Crusoe <mcrusoe@msu.edu>

    * khmer/_khmermodule.cc, lib/{khmer.hh, hashtable.{cc,hh}},
    tests/test_{hashbits,hashbits_obj,labelhash}.py: don't implicitly downcast
    tagset_size(). Changes fileformat version for saved tagsets.

2014-03-13  Ram RS  <ramrs@nyu.edu>
